--- a/thai_recipe_app/package.json
+++ b/thai_recipe_app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "dom": "^0.0.3",
     "emotion": "^11.0.0",
     "install": "^0.13.0",
