--- a/thai_recipe_app/package.json
+++ b/thai_recipe_app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-share": "^5.1.0",
     "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
