--- a/thai_recipe_app/package.json
+++ b/thai_recipe_app/package.json
@@ -11,16 +11,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "dom": "^0.0.3",
     "emotion": "^11.0.0",
     "install": "^0.13.0",
+    "multer": "^1.4.5-lts.1",
     "npm": "^10.8.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "react-share": "^5.1.0",
     "router": "^1.3.8",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
